// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleBuilder render() renders 1`] = `
<RuleBuilder
  onAddRule={
    [MockFunction] {
      "calls": Array [
        Array [
          "path:some/path/* janedoe@example.com",
        ],
      ],
    }
  }
  project={
    Object {
      "hasAccess": true,
      "id": "2",
      "isBookmarked": false,
      "isMember": true,
      "name": "Project Name",
      "slug": "project-slug",
      "teams": Array [],
    }
  }
>
  <BuilderBar>
    <div
      className="css-1rsoebt-BuilderBar e1hyuoc75"
    >
      <BuilderSelect
        clearable={false}
        name="select-type"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Path",
              "value": "path",
            },
            Object {
              "label": "URL",
              "value": "url",
            },
          ]
        }
        showSearch={false}
        style={
          Object {
            "width": 140,
          }
        }
        value="path"
      >
        <SelectField
          className="css-1bclqmz-BuilderSelect e1hyuoc76"
          clearable={false}
          disabled={false}
          hideErrorMessage={false}
          name="select-type"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "Path",
                "value": "path",
              },
              Object {
                "label": "URL",
                "value": "url",
              },
            ]
          }
          required={false}
          showSearch={false}
          style={
            Object {
              "width": 140,
            }
          }
          value="path"
        >
          <div
            className="css-1bclqmz-BuilderSelect e1hyuoc76"
            style={
              Object {
                "width": 140,
              }
            }
          >
            <div
              className="controls"
            >
              <StyledSelect
                arrowRenderer={[Function]}
                clearable={false}
                disabled={false}
                id="id-select-type"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Path",
                      "value": "path",
                    },
                    Object {
                      "label": "URL",
                      "value": "url",
                    },
                  ]
                }
                required={false}
                value="path"
              >
                <Select
                  arrowRenderer={[Function]}
                  autosize={true}
                  backspaceRemoves={true}
                  backspaceToRemoveMessage="Press backspace to remove {label}"
                  className="css-16280ey-StyledSelect e1m8gyzz0"
                  clearAllText="Clear all"
                  clearRenderer={[Function]}
                  clearValueText="Clear value"
                  clearable={false}
                  closeOnSelect={true}
                  deleteRemoves={true}
                  delimiter=","
                  disabled={false}
                  escapeClearsValue={true}
                  filterOptions={[Function]}
                  id="id-select-type"
                  ignoreAccents={true}
                  ignoreCase={true}
                  inputProps={Object {}}
                  isLoading={false}
                  joinValues={false}
                  labelKey="label"
                  matchPos="any"
                  matchProp="any"
                  menuBuffer={0}
                  menuRenderer={[Function]}
                  multi={false}
                  noResultsText="No results found"
                  onBlurResetsInput={true}
                  onChange={[Function]}
                  onCloseResetsInput={true}
                  onSelectResetsInput={true}
                  openOnClick={true}
                  optionComponent={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "Path",
                        "value": "path",
                      },
                      Object {
                        "label": "URL",
                        "value": "url",
                      },
                    ]
                  }
                  pageSize={5}
                  placeholder="Select..."
                  removeSelected={true}
                  required={false}
                  rtl={false}
                  scrollMenuIntoView={true}
                  searchable={true}
                  simpleValue={false}
                  tabSelectsValue={true}
                  trimFilter={true}
                  value="path"
                  valueComponent={[Function]}
                  valueKey="value"
                >
                  <div
                    className="Select css-16280ey-StyledSelect e1m8gyzz0 has-value is-searchable Select--single"
                  >
                    <div
                      className="Select-control"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                    >
                      <span
                        className="Select-multi-value-wrapper"
                        id="react-select-2--value"
                      >
                        <Value
                          disabled={false}
                          id="react-select-2--value-item"
                          instancePrefix="react-select-2-"
                          onClick={null}
                          placeholder="Select..."
                          value={
                            Object {
                              "label": "Path",
                              "value": "path",
                            }
                          }
                        >
                          <div
                            className="Select-value"
                          >
                            <span
                              aria-selected="true"
                              className="Select-value-label"
                              id="react-select-2--value-item"
                              role="option"
                            >
                              Path
                            </span>
                          </div>
                        </Value>
                        <AutosizeInput
                          aria-activedescendant="react-select-2--value"
                          aria-expanded="false"
                          aria-haspopup="false"
                          aria-owns=""
                          className="Select-input"
                          id="id-select-type"
                          injectStyles={true}
                          minWidth="5"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={false}
                          role="combobox"
                          value=""
                        >
                          <div
                            className="Select-input"
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-activedescendant="react-select-2--value"
                              aria-expanded="false"
                              aria-haspopup="false"
                              aria-owns=""
                              id="id-select-type"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              required={false}
                              role="combobox"
                              style={
                                Object {
                                  "boxSizing": "content-box",
                                  "width": "5px",
                                }
                              }
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            />
                          </div>
                        </AutosizeInput>
                      </span>
                      <span
                        className="Select-arrow-zone"
                        onMouseDown={[Function]}
                      >
                        <span
                          className="icon-arrow-down"
                        />
                      </span>
                    </div>
                  </div>
                </Select>
              </StyledSelect>
            </div>
          </div>
        </SelectField>
      </BuilderSelect>
      <BuilderInput
        controlled={true}
        onChange={[Function]}
        placeholder="src/example/*"
        value=""
      >
        <input
          className="css-17gm6uc-Input-inputStyles-BuilderInput e1hyuoc77"
          onChange={[Function]}
          placeholder="src/example/*"
          value=""
        />
      </BuilderInput>
      <Divider
        src="icon-chevron-right"
      >
        <InlineSvg
          className="css-a4tn6s-Divider e1hyuoc78"
          src="icon-chevron-right"
        >
          <StyledSvg
            className="css-a4tn6s-Divider e1hyuoc78"
            height="1em"
            viewBox={Object {}}
            width="1em"
          >
            <svg
              className="e1hyuoc78 css-1uv43pt-StyledSvg-Divider e2idor0"
              height="1em"
              viewBox={Object {}}
              width="1em"
            >
              <use
                href="#test"
                xlinkHref="#test"
              />
            </svg>
          </StyledSvg>
        </InlineSvg>
      </Divider>
      <Flex
        align="center"
        flex="1"
        mr={1}
      >
        <Base
          align="center"
          className="css-1q48dzo"
          flex="1"
          mr={1}
        >
          <div
            className="css-1q48dzo"
            is={null}
          >
            <SelectOwners
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "actor": Object {
                      "id": "1",
                      "name": "Jane Doe",
                      "type": "user",
                    },
                    "label": "Jane Doe",
                    "searchKey": "janedoe@example.com  Jane Doe",
                    "value": "user:1",
                  },
                  Object {
                    "actor": Object {
                      "id": "2",
                      "name": "John Smith",
                      "type": "user",
                    },
                    "label": "John Smith",
                    "searchKey": "johnsmith@example.com  John Smith",
                    "value": "user:2",
                  },
                ]
              }
              value={Array []}
            >
              <MultiSelectField
                disabled={false}
                hideErrorMessage={false}
                multi={true}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "actor": Object {
                        "id": "1",
                        "name": "Jane Doe",
                        "type": "user",
                      },
                      "label": "Jane Doe",
                      "searchKey": "janedoe@example.com  Jane Doe",
                      "value": "user:1",
                    },
                    Object {
                      "actor": Object {
                        "id": "2",
                        "name": "John Smith",
                        "type": "user",
                      },
                      "label": "John Smith",
                      "searchKey": "johnsmith@example.com  John Smith",
                      "value": "user:2",
                    },
                  ]
                }
                placeholder="Add Owners"
                required={false}
                style={
                  Object {
                    "width": 200,
                  }
                }
                value={Array []}
                valueComponent={[Function]}
              >
                <div
                  className=""
                  style={
                    Object {
                      "width": 200,
                    }
                  }
                >
                  <div
                    className="controls"
                  >
                    <StyledSelect
                      arrowRenderer={[Function]}
                      disabled={false}
                      hideErrorMessage={false}
                      id="id-undefined"
                      multi={true}
                      onChange={[Function]}
                      options={
                        Array [
                          Object {
                            "actor": Object {
                              "id": "1",
                              "name": "Jane Doe",
                              "type": "user",
                            },
                            "label": "Jane Doe",
                            "searchKey": "janedoe@example.com  Jane Doe",
                            "value": "user:1",
                          },
                          Object {
                            "actor": Object {
                              "id": "2",
                              "name": "John Smith",
                              "type": "user",
                            },
                            "label": "John Smith",
                            "searchKey": "johnsmith@example.com  John Smith",
                            "value": "user:2",
                          },
                        ]
                      }
                      placeholder="Add Owners"
                      required={false}
                      style={
                        Object {
                          "width": 200,
                        }
                      }
                      value={Array []}
                      valueComponent={[Function]}
                    >
                      <Select
                        arrowRenderer={[Function]}
                        autosize={true}
                        backspaceRemoves={true}
                        backspaceToRemoveMessage="Press backspace to remove {label}"
                        className="css-16280ey-StyledSelect e1m8gyzz0"
                        clearAllText="Clear all"
                        clearRenderer={[Function]}
                        clearValueText="Clear value"
                        clearable={true}
                        closeOnSelect={true}
                        deleteRemoves={true}
                        delimiter=","
                        disabled={false}
                        escapeClearsValue={true}
                        filterOptions={[Function]}
                        hideErrorMessage={false}
                        id="id-undefined"
                        ignoreAccents={true}
                        ignoreCase={true}
                        inputProps={Object {}}
                        isLoading={false}
                        joinValues={false}
                        labelKey="label"
                        matchPos="any"
                        matchProp="any"
                        menuBuffer={0}
                        menuRenderer={[Function]}
                        multi={true}
                        noResultsText="No results found"
                        onBlurResetsInput={true}
                        onChange={[Function]}
                        onCloseResetsInput={true}
                        onSelectResetsInput={true}
                        openOnClick={true}
                        optionComponent={[Function]}
                        options={
                          Array [
                            Object {
                              "actor": Object {
                                "id": "1",
                                "name": "Jane Doe",
                                "type": "user",
                              },
                              "label": "Jane Doe",
                              "searchKey": "janedoe@example.com  Jane Doe",
                              "value": "user:1",
                            },
                            Object {
                              "actor": Object {
                                "id": "2",
                                "name": "John Smith",
                                "type": "user",
                              },
                              "label": "John Smith",
                              "searchKey": "johnsmith@example.com  John Smith",
                              "value": "user:2",
                            },
                          ]
                        }
                        pageSize={5}
                        placeholder="Add Owners"
                        removeSelected={true}
                        required={false}
                        rtl={false}
                        scrollMenuIntoView={true}
                        searchable={true}
                        simpleValue={false}
                        style={
                          Object {
                            "width": 200,
                          }
                        }
                        tabSelectsValue={true}
                        trimFilter={true}
                        value={Array []}
                        valueComponent={[Function]}
                        valueKey="value"
                      >
                        <div
                          className="Select css-16280ey-StyledSelect e1m8gyzz0 is-clearable is-searchable Select--multi"
                        >
                          <div
                            className="Select-control"
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "width": 200,
                              }
                            }
                          >
                            <span
                              className="Select-multi-value-wrapper"
                              id="react-select-3--value"
                            >
                              <div
                                className="Select-placeholder"
                              >
                                Add Owners
                              </div>
                              <AutosizeInput
                                aria-activedescendant="react-select-3--value"
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-owns=""
                                className="Select-input"
                                id="id-undefined"
                                injectStyles={true}
                                minWidth="5"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                value=""
                              >
                                <div
                                  className="Select-input"
                                  style={
                                    Object {
                                      "display": "inline-block",
                                    }
                                  }
                                >
                                  <input
                                    aria-activedescendant="react-select-3--value"
                                    aria-expanded="false"
                                    aria-haspopup="false"
                                    aria-owns=""
                                    id="id-undefined"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    required={false}
                                    role="combobox"
                                    style={
                                      Object {
                                        "boxSizing": "content-box",
                                        "width": "5px",
                                      }
                                    }
                                    value=""
                                  />
                                  <div
                                    style={
                                      Object {
                                        "height": 0,
                                        "left": 0,
                                        "overflow": "scroll",
                                        "position": "absolute",
                                        "top": 0,
                                        "visibility": "hidden",
                                        "whiteSpace": "pre",
                                      }
                                    }
                                  />
                                </div>
                              </AutosizeInput>
                            </span>
                            <span
                              className="Select-arrow-zone"
                              onMouseDown={[Function]}
                            >
                              <span
                                className="icon-arrow-down"
                              />
                            </span>
                          </div>
                        </div>
                      </Select>
                    </StyledSelect>
                  </div>
                </div>
              </MultiSelectField>
            </SelectOwners>
          </div>
        </Base>
      </Flex>
      <RuleAddButton
        icon="icon-circle-add"
        onClick={[Function]}
        priority="primary"
        size="zero"
      >
        <Button
          className="css-3daogo-RuleAddButton e1hyuoc79"
          disabled={false}
          icon="icon-circle-add"
          onClick={[Function]}
          priority="primary"
          size="zero"
        >
          <StyledSmartButton
            className="css-3daogo-RuleAddButton e1hyuoc79"
            disabled={false}
            onClick={[Function]}
            priority="primary"
            role="button"
            size="zero"
          >
            <Component
              className="e1hyuoc79 css-1j9x7af-StyledSmartButton-getColors-RuleAddButton e17811v30"
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
              size="zero"
            >
              <button
                className="e1hyuoc79 css-1j9x7af-StyledSmartButton-getColors-RuleAddButton e17811v30"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
                size="zero"
              >
                <ButtonLabel
                  size="zero"
                >
                  <Component
                    className="css-8ufe5w-ButtonLabel e17811v31"
                    size="zero"
                  >
                    <Flex
                      align="center"
                      className="css-8ufe5w-ButtonLabel e17811v31"
                      size="zero"
                    >
                      <Base
                        align="center"
                        className="e17811v31 css-g08cim-ButtonLabel"
                        size="zero"
                      >
                        <div
                          className="e17811v31 css-g08cim-ButtonLabel"
                          is={null}
                          size="zero"
                        >
                          <Icon
                            hasChildren={false}
                            size="zero"
                          >
                            <Component
                              className="css-1kk1aq-Icon e17811v32"
                              hasChildren={false}
                              size="zero"
                            >
                              <Box
                                className="css-1kk1aq-Icon e17811v32"
                                size="zero"
                              >
                                <Base
                                  className="e17811v32 css-1aoi37i-Icon"
                                  size="zero"
                                >
                                  <div
                                    className="e17811v32 css-1aoi37i-Icon"
                                    is={null}
                                    size="zero"
                                  >
                                    <StyledInlineSvg
                                      size="16px"
                                      src="icon-circle-add"
                                    >
                                      <InlineSvg
                                        className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                        size="16px"
                                        src="icon-circle-add"
                                      >
                                        <StyledSvg
                                          className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                          height="16px"
                                          viewBox={Object {}}
                                          width="16px"
                                        >
                                          <svg
                                            className="e17811v33 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                            height="16px"
                                            viewBox={Object {}}
                                            width="16px"
                                          >
                                            <use
                                              href="#test"
                                              xlinkHref="#test"
                                            />
                                          </svg>
                                        </StyledSvg>
                                      </InlineSvg>
                                    </StyledInlineSvg>
                                  </div>
                                </Base>
                              </Box>
                            </Component>
                          </Icon>
                        </div>
                      </Base>
                    </Flex>
                  </Component>
                </ButtonLabel>
              </button>
            </Component>
          </StyledSmartButton>
        </Button>
      </RuleAddButton>
    </div>
  </BuilderBar>
</RuleBuilder>
`;

exports[`RuleBuilder renders with suggestions renders 1`] = `
<RuleBuilder
  onAddRule={[MockFunction]}
  paths={
    Array [
      "a/bar",
      "a/foo",
    ]
  }
  project={
    Object {
      "hasAccess": true,
      "id": "2",
      "isBookmarked": false,
      "isMember": true,
      "name": "Project Name",
      "slug": "project-slug",
      "teams": Array [],
    }
  }
  urls={
    Array [
      "example.com/a",
      "example.com/a/foo",
    ]
  }
>
  <Candidates>
    <div
      className="css-1fyz2uk-Candidates e1hyuoc70"
    >
      <RuleCandidate
        key="a/bar"
        onClick={[Function]}
      >
        <div
          className="css-4hexhh-RuleCandidate e1hyuoc73"
          onClick={[Function]}
        >
          <AddIcon
            src="icon-circle-add"
          >
            <InlineSvg
              className="css-1ivdji5-AddIcon e1hyuoc74"
              src="icon-circle-add"
            >
              <StyledSvg
                className="css-1ivdji5-AddIcon e1hyuoc74"
                height="1em"
                viewBox={Object {}}
                width="1em"
              >
                <svg
                  className="e1hyuoc74 css-1i6gwke-StyledSvg-AddIcon e2idor0"
                  height="1em"
                  viewBox={Object {}}
                  width="1em"
                >
                  <use
                    href="#test"
                    xlinkHref="#test"
                  />
                </svg>
              </StyledSvg>
            </InlineSvg>
          </AddIcon>
          <StyledTextOverflow>
            <div
              className="css-q3yspe-TextOverflow-StyledTextOverflow e1hyuoc72"
            >
              a/bar
            </div>
          </StyledTextOverflow>
          <TypeHint>
            <div
              className="css-6d8mj3-TypeHint e1hyuoc71"
            >
              [PATH]
            </div>
          </TypeHint>
        </div>
      </RuleCandidate>
      <RuleCandidate
        key="a/foo"
        onClick={[Function]}
      >
        <div
          className="css-4hexhh-RuleCandidate e1hyuoc73"
          onClick={[Function]}
        >
          <AddIcon
            src="icon-circle-add"
          >
            <InlineSvg
              className="css-1ivdji5-AddIcon e1hyuoc74"
              src="icon-circle-add"
            >
              <StyledSvg
                className="css-1ivdji5-AddIcon e1hyuoc74"
                height="1em"
                viewBox={Object {}}
                width="1em"
              >
                <svg
                  className="e1hyuoc74 css-1i6gwke-StyledSvg-AddIcon e2idor0"
                  height="1em"
                  viewBox={Object {}}
                  width="1em"
                >
                  <use
                    href="#test"
                    xlinkHref="#test"
                  />
                </svg>
              </StyledSvg>
            </InlineSvg>
          </AddIcon>
          <StyledTextOverflow>
            <div
              className="css-q3yspe-TextOverflow-StyledTextOverflow e1hyuoc72"
            >
              a/foo
            </div>
          </StyledTextOverflow>
          <TypeHint>
            <div
              className="css-6d8mj3-TypeHint e1hyuoc71"
            >
              [PATH]
            </div>
          </TypeHint>
        </div>
      </RuleCandidate>
      <RuleCandidate
        key="example.com/a"
        onClick={[Function]}
      >
        <div
          className="css-4hexhh-RuleCandidate e1hyuoc73"
          onClick={[Function]}
        >
          <AddIcon
            src="icon-circle-add"
          >
            <InlineSvg
              className="css-1ivdji5-AddIcon e1hyuoc74"
              src="icon-circle-add"
            >
              <StyledSvg
                className="css-1ivdji5-AddIcon e1hyuoc74"
                height="1em"
                viewBox={Object {}}
                width="1em"
              >
                <svg
                  className="e1hyuoc74 css-1i6gwke-StyledSvg-AddIcon e2idor0"
                  height="1em"
                  viewBox={Object {}}
                  width="1em"
                >
                  <use
                    href="#test"
                    xlinkHref="#test"
                  />
                </svg>
              </StyledSvg>
            </InlineSvg>
          </AddIcon>
          <StyledTextOverflow>
            <div
              className="css-q3yspe-TextOverflow-StyledTextOverflow e1hyuoc72"
            >
              example.com/a
            </div>
          </StyledTextOverflow>
          <TypeHint>
            <div
              className="css-6d8mj3-TypeHint e1hyuoc71"
            >
              [URL]
            </div>
          </TypeHint>
        </div>
      </RuleCandidate>
      <RuleCandidate
        key="example.com/a/foo"
        onClick={[Function]}
      >
        <div
          className="css-4hexhh-RuleCandidate e1hyuoc73"
          onClick={[Function]}
        >
          <AddIcon
            src="icon-circle-add"
          >
            <InlineSvg
              className="css-1ivdji5-AddIcon e1hyuoc74"
              src="icon-circle-add"
            >
              <StyledSvg
                className="css-1ivdji5-AddIcon e1hyuoc74"
                height="1em"
                viewBox={Object {}}
                width="1em"
              >
                <svg
                  className="e1hyuoc74 css-1i6gwke-StyledSvg-AddIcon e2idor0"
                  height="1em"
                  viewBox={Object {}}
                  width="1em"
                >
                  <use
                    href="#test"
                    xlinkHref="#test"
                  />
                </svg>
              </StyledSvg>
            </InlineSvg>
          </AddIcon>
          <StyledTextOverflow>
            <div
              className="css-q3yspe-TextOverflow-StyledTextOverflow e1hyuoc72"
            >
              example.com/a/foo
            </div>
          </StyledTextOverflow>
          <TypeHint>
            <div
              className="css-6d8mj3-TypeHint e1hyuoc71"
            >
              [URL]
            </div>
          </TypeHint>
        </div>
      </RuleCandidate>
    </div>
  </Candidates>
  <BuilderBar>
    <div
      className="css-1rsoebt-BuilderBar e1hyuoc75"
    >
      <BuilderSelect
        clearable={false}
        name="select-type"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Path",
              "value": "path",
            },
            Object {
              "label": "URL",
              "value": "url",
            },
          ]
        }
        showSearch={false}
        style={
          Object {
            "width": 140,
          }
        }
        value="path"
      >
        <SelectField
          className="css-1bclqmz-BuilderSelect e1hyuoc76"
          clearable={false}
          disabled={false}
          hideErrorMessage={false}
          name="select-type"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "Path",
                "value": "path",
              },
              Object {
                "label": "URL",
                "value": "url",
              },
            ]
          }
          required={false}
          showSearch={false}
          style={
            Object {
              "width": 140,
            }
          }
          value="path"
        >
          <div
            className="css-1bclqmz-BuilderSelect e1hyuoc76"
            style={
              Object {
                "width": 140,
              }
            }
          >
            <div
              className="controls"
            >
              <StyledSelect
                arrowRenderer={[Function]}
                clearable={false}
                disabled={false}
                id="id-select-type"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Path",
                      "value": "path",
                    },
                    Object {
                      "label": "URL",
                      "value": "url",
                    },
                  ]
                }
                required={false}
                value="path"
              >
                <Select
                  arrowRenderer={[Function]}
                  autosize={true}
                  backspaceRemoves={true}
                  backspaceToRemoveMessage="Press backspace to remove {label}"
                  className="css-16280ey-StyledSelect e1m8gyzz0"
                  clearAllText="Clear all"
                  clearRenderer={[Function]}
                  clearValueText="Clear value"
                  clearable={false}
                  closeOnSelect={true}
                  deleteRemoves={true}
                  delimiter=","
                  disabled={false}
                  escapeClearsValue={true}
                  filterOptions={[Function]}
                  id="id-select-type"
                  ignoreAccents={true}
                  ignoreCase={true}
                  inputProps={Object {}}
                  isLoading={false}
                  joinValues={false}
                  labelKey="label"
                  matchPos="any"
                  matchProp="any"
                  menuBuffer={0}
                  menuRenderer={[Function]}
                  multi={false}
                  noResultsText="No results found"
                  onBlurResetsInput={true}
                  onChange={[Function]}
                  onCloseResetsInput={true}
                  onSelectResetsInput={true}
                  openOnClick={true}
                  optionComponent={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "Path",
                        "value": "path",
                      },
                      Object {
                        "label": "URL",
                        "value": "url",
                      },
                    ]
                  }
                  pageSize={5}
                  placeholder="Select..."
                  removeSelected={true}
                  required={false}
                  rtl={false}
                  scrollMenuIntoView={true}
                  searchable={true}
                  simpleValue={false}
                  tabSelectsValue={true}
                  trimFilter={true}
                  value="path"
                  valueComponent={[Function]}
                  valueKey="value"
                >
                  <div
                    className="Select css-16280ey-StyledSelect e1m8gyzz0 has-value is-searchable Select--single"
                  >
                    <div
                      className="Select-control"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                    >
                      <span
                        className="Select-multi-value-wrapper"
                        id="react-select-4--value"
                      >
                        <Value
                          disabled={false}
                          id="react-select-4--value-item"
                          instancePrefix="react-select-4-"
                          onClick={null}
                          placeholder="Select..."
                          value={
                            Object {
                              "label": "Path",
                              "value": "path",
                            }
                          }
                        >
                          <div
                            className="Select-value"
                          >
                            <span
                              aria-selected="true"
                              className="Select-value-label"
                              id="react-select-4--value-item"
                              role="option"
                            >
                              Path
                            </span>
                          </div>
                        </Value>
                        <AutosizeInput
                          aria-activedescendant="react-select-4--value"
                          aria-expanded="false"
                          aria-haspopup="false"
                          aria-owns=""
                          className="Select-input"
                          id="id-select-type"
                          injectStyles={true}
                          minWidth="5"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={false}
                          role="combobox"
                          value=""
                        >
                          <div
                            className="Select-input"
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-activedescendant="react-select-4--value"
                              aria-expanded="false"
                              aria-haspopup="false"
                              aria-owns=""
                              id="id-select-type"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              required={false}
                              role="combobox"
                              style={
                                Object {
                                  "boxSizing": "content-box",
                                  "width": "5px",
                                }
                              }
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            />
                          </div>
                        </AutosizeInput>
                      </span>
                      <span
                        className="Select-arrow-zone"
                        onMouseDown={[Function]}
                      >
                        <span
                          className="icon-arrow-down"
                        />
                      </span>
                    </div>
                  </div>
                </Select>
              </StyledSelect>
            </div>
          </div>
        </SelectField>
      </BuilderSelect>
      <BuilderInput
        controlled={true}
        onChange={[Function]}
        placeholder="src/example/*"
        value="a/bar"
      >
        <input
          className="css-17gm6uc-Input-inputStyles-BuilderInput e1hyuoc77"
          onChange={[Function]}
          placeholder="src/example/*"
          value="a/bar"
        />
      </BuilderInput>
      <Divider
        src="icon-chevron-right"
      >
        <InlineSvg
          className="css-a4tn6s-Divider e1hyuoc78"
          src="icon-chevron-right"
        >
          <StyledSvg
            className="css-a4tn6s-Divider e1hyuoc78"
            height="1em"
            viewBox={Object {}}
            width="1em"
          >
            <svg
              className="e1hyuoc78 css-1uv43pt-StyledSvg-Divider e2idor0"
              height="1em"
              viewBox={Object {}}
              width="1em"
            >
              <use
                href="#test"
                xlinkHref="#test"
              />
            </svg>
          </StyledSvg>
        </InlineSvg>
      </Divider>
      <Flex
        align="center"
        flex="1"
        mr={1}
      >
        <Base
          align="center"
          className="css-1q48dzo"
          flex="1"
          mr={1}
        >
          <div
            className="css-1q48dzo"
            is={null}
          >
            <SelectOwners
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "actor": Object {
                      "id": "1",
                      "name": "Jane Doe",
                      "type": "user",
                    },
                    "label": "Jane Doe",
                    "searchKey": "janedoe@example.com  Jane Doe",
                    "value": "user:1",
                  },
                  Object {
                    "actor": Object {
                      "id": "2",
                      "name": "John Smith",
                      "type": "user",
                    },
                    "label": "John Smith",
                    "searchKey": "johnsmith@example.com  John Smith",
                    "value": "user:2",
                  },
                ]
              }
              value={
                Array [
                  Object {
                    "actor": Object {
                      "id": "1",
                      "name": "Jane Doe",
                      "type": "user",
                    },
                    "label": "Jane Doe",
                    "searchKey": "janedoe@example.com  Jane Doe",
                    "value": "user:1",
                  },
                ]
              }
            >
              <MultiSelectField
                disabled={false}
                hideErrorMessage={false}
                multi={true}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "actor": Object {
                        "id": "1",
                        "name": "Jane Doe",
                        "type": "user",
                      },
                      "label": "Jane Doe",
                      "searchKey": "janedoe@example.com  Jane Doe",
                      "value": "user:1",
                    },
                    Object {
                      "actor": Object {
                        "id": "2",
                        "name": "John Smith",
                        "type": "user",
                      },
                      "label": "John Smith",
                      "searchKey": "johnsmith@example.com  John Smith",
                      "value": "user:2",
                    },
                  ]
                }
                placeholder="Add Owners"
                required={false}
                style={
                  Object {
                    "width": 200,
                  }
                }
                value={
                  Array [
                    Object {
                      "actor": Object {
                        "id": "1",
                        "name": "Jane Doe",
                        "type": "user",
                      },
                      "label": "Jane Doe",
                      "searchKey": "janedoe@example.com  Jane Doe",
                      "value": "user:1",
                    },
                  ]
                }
                valueComponent={[Function]}
              >
                <div
                  className=""
                  style={
                    Object {
                      "width": 200,
                    }
                  }
                >
                  <div
                    className="controls"
                  >
                    <StyledSelect
                      arrowRenderer={[Function]}
                      disabled={false}
                      hideErrorMessage={false}
                      id="id-undefined"
                      multi={true}
                      onChange={[Function]}
                      options={
                        Array [
                          Object {
                            "actor": Object {
                              "id": "1",
                              "name": "Jane Doe",
                              "type": "user",
                            },
                            "label": "Jane Doe",
                            "searchKey": "janedoe@example.com  Jane Doe",
                            "value": "user:1",
                          },
                          Object {
                            "actor": Object {
                              "id": "2",
                              "name": "John Smith",
                              "type": "user",
                            },
                            "label": "John Smith",
                            "searchKey": "johnsmith@example.com  John Smith",
                            "value": "user:2",
                          },
                        ]
                      }
                      placeholder="Add Owners"
                      required={false}
                      style={
                        Object {
                          "width": 200,
                        }
                      }
                      value={
                        Array [
                          Object {
                            "actor": Object {
                              "id": "1",
                              "name": "Jane Doe",
                              "type": "user",
                            },
                            "label": "Jane Doe",
                            "searchKey": "janedoe@example.com  Jane Doe",
                            "value": "user:1",
                          },
                        ]
                      }
                      valueComponent={[Function]}
                    >
                      <Select
                        arrowRenderer={[Function]}
                        autosize={true}
                        backspaceRemoves={true}
                        backspaceToRemoveMessage="Press backspace to remove {label}"
                        className="css-16280ey-StyledSelect e1m8gyzz0"
                        clearAllText="Clear all"
                        clearRenderer={[Function]}
                        clearValueText="Clear value"
                        clearable={true}
                        closeOnSelect={true}
                        deleteRemoves={true}
                        delimiter=","
                        disabled={false}
                        escapeClearsValue={true}
                        filterOptions={[Function]}
                        hideErrorMessage={false}
                        id="id-undefined"
                        ignoreAccents={true}
                        ignoreCase={true}
                        inputProps={Object {}}
                        isLoading={false}
                        joinValues={false}
                        labelKey="label"
                        matchPos="any"
                        matchProp="any"
                        menuBuffer={0}
                        menuRenderer={[Function]}
                        multi={true}
                        noResultsText="No results found"
                        onBlurResetsInput={true}
                        onChange={[Function]}
                        onCloseResetsInput={true}
                        onSelectResetsInput={true}
                        openOnClick={true}
                        optionComponent={[Function]}
                        options={
                          Array [
                            Object {
                              "actor": Object {
                                "id": "1",
                                "name": "Jane Doe",
                                "type": "user",
                              },
                              "label": "Jane Doe",
                              "searchKey": "janedoe@example.com  Jane Doe",
                              "value": "user:1",
                            },
                            Object {
                              "actor": Object {
                                "id": "2",
                                "name": "John Smith",
                                "type": "user",
                              },
                              "label": "John Smith",
                              "searchKey": "johnsmith@example.com  John Smith",
                              "value": "user:2",
                            },
                          ]
                        }
                        pageSize={5}
                        placeholder="Add Owners"
                        removeSelected={true}
                        required={false}
                        rtl={false}
                        scrollMenuIntoView={true}
                        searchable={true}
                        simpleValue={false}
                        style={
                          Object {
                            "width": 200,
                          }
                        }
                        tabSelectsValue={true}
                        trimFilter={true}
                        value={
                          Array [
                            Object {
                              "actor": Object {
                                "id": "1",
                                "name": "Jane Doe",
                                "type": "user",
                              },
                              "label": "Jane Doe",
                              "searchKey": "janedoe@example.com  Jane Doe",
                              "value": "user:1",
                            },
                          ]
                        }
                        valueComponent={[Function]}
                        valueKey="value"
                      >
                        <div
                          className="Select css-16280ey-StyledSelect e1m8gyzz0 has-value is-clearable is-searchable Select--multi"
                        >
                          <div
                            className="Select-control"
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "width": 200,
                              }
                            }
                          >
                            <span
                              className="Select-multi-value-wrapper"
                              id="react-select-5--value"
                            >
                              <ValueComponent
                                disabled={false}
                                id="react-select-5--value-0"
                                instancePrefix="react-select-5-"
                                key="value-0-user:1"
                                onClick={null}
                                onRemove={[Function]}
                                placeholder="Add Owners"
                                value={
                                  Object {
                                    "actor": Object {
                                      "id": "1",
                                      "name": "Jane Doe",
                                      "type": "user",
                                    },
                                    "label": "Jane Doe",
                                    "searchKey": "janedoe@example.com  Jane Doe",
                                    "value": "user:1",
                                  }
                                }
                              >
                                <a
                                  onClick={[Function]}
                                >
                                  <ActorAvatar
                                    actor={
                                      Object {
                                        "id": "1",
                                        "name": "Jane Doe",
                                        "type": "user",
                                      }
                                    }
                                    size={28}
                                  >
                                    <Avatar
                                      hasTooltip={true}
                                      size={28}
                                      user={
                                        Object {
                                          "email": "janedoe@example.com",
                                          "id": "1",
                                          "name": "Jane Doe",
                                          "username": "foo@example.com",
                                        }
                                      }
                                    >
                                      <UserAvatar
                                        gravatar={true}
                                        hasTooltip={true}
                                        size={28}
                                        user={
                                          Object {
                                            "email": "janedoe@example.com",
                                            "id": "1",
                                            "name": "Jane Doe",
                                            "username": "foo@example.com",
                                          }
                                        }
                                      >
                                        <BaseAvatar
                                          gravatar={true}
                                          gravatarId="janedoe@example.com"
                                          hasTooltip={true}
                                          letterId="janedoe@example.com"
                                          size={28}
                                          style={Object {}}
                                          title="Jane Doe"
                                          tooltip="Jane Doe (janedoe@example.com)"
                                          type="gravatar"
                                        >
                                          <Tooltip
                                            disabled={false}
                                            title="Jane Doe (janedoe@example.com)"
                                          >
                                            <span
                                              className="tip avatar"
                                              style={
                                                Object {
                                                  "height": "28px",
                                                  "width": "28px",
                                                }
                                              }
                                              title="Jane Doe (janedoe@example.com)"
                                            >
                                              <img
                                                onError={[Function]}
                                                onLoad={[Function]}
                                                src="undefined/avatar/e1f3994f2632af3d1c8c2dcc168a10e6?d=blank&s=32"
                                              />
                                            </span>
                                          </Tooltip>
                                        </BaseAvatar>
                                      </UserAvatar>
                                    </Avatar>
                                  </ActorAvatar>
                                </a>
                              </ValueComponent>
                              <AutosizeInput
                                aria-activedescendant="react-select-5--value"
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-owns=""
                                className="Select-input"
                                id="id-undefined"
                                injectStyles={true}
                                minWidth="5"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                value=""
                              >
                                <div
                                  className="Select-input"
                                  style={
                                    Object {
                                      "display": "inline-block",
                                    }
                                  }
                                >
                                  <input
                                    aria-activedescendant="react-select-5--value"
                                    aria-expanded="false"
                                    aria-haspopup="false"
                                    aria-owns=""
                                    id="id-undefined"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    required={false}
                                    role="combobox"
                                    style={
                                      Object {
                                        "boxSizing": "content-box",
                                        "width": "5px",
                                      }
                                    }
                                    value=""
                                  />
                                  <div
                                    style={
                                      Object {
                                        "height": 0,
                                        "left": 0,
                                        "overflow": "scroll",
                                        "position": "absolute",
                                        "top": 0,
                                        "visibility": "hidden",
                                        "whiteSpace": "pre",
                                      }
                                    }
                                  />
                                </div>
                              </AutosizeInput>
                            </span>
                            <span
                              aria-label="Clear all"
                              className="Select-clear-zone"
                              onMouseDown={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              title="Clear all"
                            >
                              <span
                                className="Select-clear"
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "&times;",
                                  }
                                }
                              />
                            </span>
                            <span
                              className="Select-arrow-zone"
                              onMouseDown={[Function]}
                            >
                              <span
                                className="icon-arrow-down"
                              />
                            </span>
                          </div>
                        </div>
                      </Select>
                    </StyledSelect>
                  </div>
                </div>
              </MultiSelectField>
            </SelectOwners>
          </div>
        </Base>
      </Flex>
      <RuleAddButton
        icon="icon-circle-add"
        onClick={[Function]}
        priority="primary"
        size="zero"
      >
        <Button
          className="css-3daogo-RuleAddButton e1hyuoc79"
          disabled={false}
          icon="icon-circle-add"
          onClick={[Function]}
          priority="primary"
          size="zero"
        >
          <StyledSmartButton
            className="css-3daogo-RuleAddButton e1hyuoc79"
            disabled={false}
            onClick={[Function]}
            priority="primary"
            role="button"
            size="zero"
          >
            <Component
              className="e1hyuoc79 css-1j9x7af-StyledSmartButton-getColors-RuleAddButton e17811v30"
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
              size="zero"
            >
              <button
                className="e1hyuoc79 css-1j9x7af-StyledSmartButton-getColors-RuleAddButton e17811v30"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
                size="zero"
              >
                <ButtonLabel
                  size="zero"
                >
                  <Component
                    className="css-8ufe5w-ButtonLabel e17811v31"
                    size="zero"
                  >
                    <Flex
                      align="center"
                      className="css-8ufe5w-ButtonLabel e17811v31"
                      size="zero"
                    >
                      <Base
                        align="center"
                        className="e17811v31 css-g08cim-ButtonLabel"
                        size="zero"
                      >
                        <div
                          className="e17811v31 css-g08cim-ButtonLabel"
                          is={null}
                          size="zero"
                        >
                          <Icon
                            hasChildren={false}
                            size="zero"
                          >
                            <Component
                              className="css-1kk1aq-Icon e17811v32"
                              hasChildren={false}
                              size="zero"
                            >
                              <Box
                                className="css-1kk1aq-Icon e17811v32"
                                size="zero"
                              >
                                <Base
                                  className="e17811v32 css-1aoi37i-Icon"
                                  size="zero"
                                >
                                  <div
                                    className="e17811v32 css-1aoi37i-Icon"
                                    is={null}
                                    size="zero"
                                  >
                                    <StyledInlineSvg
                                      size="16px"
                                      src="icon-circle-add"
                                    >
                                      <InlineSvg
                                        className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                        size="16px"
                                        src="icon-circle-add"
                                      >
                                        <StyledSvg
                                          className="css-1ov3rcq-StyledInlineSvg e17811v33"
                                          height="16px"
                                          viewBox={Object {}}
                                          width="16px"
                                        >
                                          <svg
                                            className="e17811v33 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                            height="16px"
                                            viewBox={Object {}}
                                            width="16px"
                                          >
                                            <use
                                              href="#test"
                                              xlinkHref="#test"
                                            />
                                          </svg>
                                        </StyledSvg>
                                      </InlineSvg>
                                    </StyledInlineSvg>
                                  </div>
                                </Base>
                              </Box>
                            </Component>
                          </Icon>
                        </div>
                      </Base>
                    </Flex>
                  </Component>
                </ButtonLabel>
              </button>
            </Component>
          </StyledSmartButton>
        </Button>
      </RuleAddButton>
    </div>
  </BuilderBar>
</RuleBuilder>
`;
